--- a/_sass/minima/solarized.scss
+++ b/_sass/minima/solarized.scss
@@ -19,14 +19,14 @@ $sol-is-dark: false !default;
 // Some colors were altered from the canonical scheme to comply with
 // WCAG-contrast criteria between foreground and background colors.
 
-$sol-base03:   #003635;  // 15 -12 -12
-$sol-base02:   #074240;  // 20 -12 -12
-$sol-base01:   #406e6c;  // 45 -07 -07
-$sol-base00:   #587f83;  // original hex: #657b83 ; L*a*b: 50 -07 -07
-$sol-base0:    #8b9899;  // original hex: #839496 ; L*a*b: 60 -06 -03
-$sol-base1:    #eae0f1;  // 65 -05 -02
-$sol-base2:    #f0e0f5;  // 92 -00  10
-$sol-base3:    #f9edfa;  // 97  00  10
+$sol-base03:   #002b36;  // 15 -12 -12
+$sol-base02:   #073642;  // 20 -12 -12
+$sol-base01:   #586e75;  // 45 -07 -07
+$sol-base00:   #4e626a;  // original hex: #657b83 ; L*a*b: 50 -07 -07
+$sol-base0:    #91a0a1;  // original hex: #839496 ; L*a*b: 60 -06 -03
+$sol-base1:    #93a1a1;  // 65 -05 -02
+$sol-base2:    #eee8d5;  // 92 -00  10
+$sol-base3:    #fdf6e3;  // 97  00  10
 $sol-yellow:   #b58900;  // 60  10  65
 $sol-orange:   #cb4b16;  // 50  50  55
 $sol-red:      #dc322f;  // 50  65  45
