--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,19 +1,20 @@
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>
-    {% if page.title == "Home" %}
-      {{ site.title }}{% if site.tagline %} &middot; {{ site.tagline }}{% endif %}
-    {% else %}
-      {{ page.title }} &middot; {{ site.title }}
+    {% if site.google_analytics %}
+        {% include googeanalytics.html %}
     {% endif %}
-  </title>
-
-  <link rel="stylesheet" href="{{ 'styles.css' | relative_url }}">
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ '/assets/apple-touch-icon-precomposed.png' | relative_url }}">
-  <link rel="shortcut icon" href="{{ '/assets/favicon.ico' | relative_url }}">
-  <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ 'atom.xml' | relative_url }}">
-
-  {% seo title=false %}
+    
+    <title>{{ site.site_title }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="k4p92PduVR_7ZqAlB8-OMnONNOl9GkkmUh4dlKfbY7o" />
+    
+    <link rel="stylesheet" href="vendor/css/normalize.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="vendor/css/hint.base.min.css"/>
+    <link rel="stylesheet" href="vendor/css/semi-transparent-buttons.css"/>
+    <link rel="stylesheet" href="assets/css/progress.css"/>
+    <link rel="stylesheet" href="assets/css/main.css"/>
+    <link rel="stylesheet" href="assets/css/card.css"/>
+    <link rel="shortcut icon" href="assets/images/favicon.ico" />
+    <meta name="description" content="Portfolio - Abhishek Nagekar | Full stack web development, open source and information security">
 </head>
